[gd_scene load_steps=14 format=4 uid="uid://clv81mumqhage"]

[ext_resource type="Script" path="res://casIncompleteScenes/main.gd" id="1_8q21h"]
[ext_resource type="PackedScene" uid="uid://64kk41csrmwh" path="res://casIncompleteScenes/Scenes/player.tscn" id="1_ebon2"]
[ext_resource type="Texture2D" uid="uid://whldjdgd2yg2" path="res://Assets/Cute_Fantasy_Free/Tiles/Grass_Middle.png" id="3_y6ycr"]
[ext_resource type="Texture2D" uid="uid://beruwyt8ga5da" path="res://Assets/Cute_Fantasy_Free/Tiles/Path_Middle.png" id="4_ump44"]
[ext_resource type="Texture2D" uid="uid://bbjo23p7opss7" path="res://Assets/Cute_Fantasy_Free/Tiles/Water_Middle.png" id="6_64oc1"]
[ext_resource type="PackedScene" uid="uid://c4etiehr4qi5" path="res://Scenes/gold.tscn" id="8_ogbpq"]
[ext_resource type="PackedScene" uid="uid://b4g8y0hm6xin3" path="res://casIncompleteScenes/Scenes/windGust.tscn" id="8_uysb3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vdr8a"]
texture = ExtResource("3_y6ycr")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oo5af"]
texture = ExtResource("4_ump44")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_atua0"]
texture = ExtResource("6_64oc1")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7yljf"]
physics_layer_0/collision_layer = 1
sources/11 = SubResource("TileSetAtlasSource_vdr8a")
sources/12 = SubResource("TileSetAtlasSource_oo5af")
sources/14 = SubResource("TileSetAtlasSource_atua0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgwhg"]
size = Vector2(16, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjr8r"]
size = Vector2(16, 112)

[node name="Game" type="Node2D"]
script = ExtResource("1_8q21h")

[node name="Player" parent="." instance=ExtResource("1_ebon2")]
position = Vector2(-22, -301)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_bottom = 120
limit_smoothed = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7yljf")
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD9/wAACwAAAAAAAAD+/wAACwAAAAAAAAD//wAACwAAAAAAAAAAAAAACwAAAAAAAAABAAAACwAAAAAAAAACAAAACwAAAAAAAAADAAAACwAAAAAAAAD8/wAACwAAAAAAAAD7/wAACwAAAAAAAAAAAAEADAAAAAAAAAABAAEADAAAAAAAAAD//wEADAAAAAAAAAD7/wEADAAAAAAAAAACAAEADAAAAAAAAAADAAEADAAAAAAAAAAEAAEADAAAAAAAAAAFAAEADAAAAAAAAAD6/wEADAAAAAAAAAD6/wIADAAAAAAAAAD5/wIADAAAAAAAAAD4/wMADAAAAAAAAAD5/wMADAAAAAAAAAD4/wQADAAAAAAAAAD3/wQADAAAAAAAAAD8/wEADAAAAAAAAAD9/wEADAAAAAAAAAD2/wQADgAAAAAAAAD1/wQADgAAAAAAAAD0/wQADgAAAAAAAADz/wQADgAAAAAAAADy/wQADgAAAAAAAADx/wQADgAAAAAAAADw/wQADgAAAAAAAADv/wQADgAAAAAAAADu/wQADgAAAAAAAAD+/wEADAAAAAAAAAD3/wUADAAAAAAAAAD2/wUADAAAAAAAAAD1/wUADAAAAAAAAAD0/wUADAAAAAAAAADz/wUADAAAAAAAAADy/wUADAAAAAAAAADx/wUADAAAAAAAAADw/wUADAAAAAAAAADv/wUADAAAAAAAAADu/wUADAAAAAAAAADt/wUADAAAAAAAAADt/wQADAAAAAAAAADt/wMADAAAAAAAAADt/wEADAAAAAAAAADt/wAADAAAAAAAAADt////DAAAAAAAAADt//7/DAAAAAAAAADt//3/DAAAAAAAAADt/wIADAAAAAAAAADt//v/DAAAAAAAAADt//z/DAAAAAAAAAAEAAAADAAAAAAAAAAFAAAADAAAAAAAAAAGAAAADAAAAAAAAAAHAAAADAAAAAAAAAAIAAAADAAAAAAAAAAJAAAADAAAAAAAAAAKAAAADAAAAAAAAAALAAAADAAAAAAAAAAMAAAADAAAAAAAAAANAAAADAAAAAAAAAAOAAAADAAAAAAAAAAPAAAADAAAAAAAAAAQAAAADAAAAAAAAAARAAAADAAAAAAAAAASAAAADAAAAAAAAAATAAAADAAAAAAAAAAUAAAADAAAAAAAAAAVAAAADAAAAAAAAAAWAAAADAAAAAAAAAAXAAAADAAAAAAAAAAYAAAADAAAAAAAAAAZAAAADAAAAAAAAAAaAAAADAAAAAAAAAAbAAAADAAAAAAAAAAcAAAADAAAAAAAAAAdAAAADAAAAAAAAAAeAAAADAAAAAAAAAAfAAAADAAAAAAAAAAgAAAADAAAAAAAAAAhAAAADAAAAAAAAAAGAP3/CwAAAAAAAAAHAP3/CwAAAAAAAAALAPv/CwAAAAAAAAANAPv/CwAAAAAAAAAMAPv/CwAAAAAAAAAIAPn/CwAAAAAAAAAHAPn/CwAAAAAAAAD///f/CwAAAAAAAAD+//f/CwAAAAAAAAD9//f/CwAAAAAAAAD8//f/CwAAAAAAAAD7//f/CwAAAAAAAAD6//f/CwAAAAAAAAD5//f/CwAAAAAAAAD4//f/CwAAAAAAAAD3//f/CwAAAAAAAAD2//f/CwAAAAAAAAD1//f/CwAAAAAAAAD0//f/CwAAAAAAAADz//f/CwAAAAAAAAA=")
tile_set = SubResource("TileSet_7yljf")

[node name="Layer2" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADs//v/DAAAAAAAAADr//v/DAAAAAAAAADq//v/DAAAAAAAAADp//v/DAAAAAAAAADo//v/DAAAAAAAAADn//v/DAAAAAAAAADm//v/DAAAAAAAAADm//r/DAAAAAAAAADl//r/DAAAAAAAAADk//r/CwAAAAAAAADk//v/CwAAAAAAAADj//z/CwAAAAAAAADj//v/CwAAAAAAAADj//r/CwAAAAAAAADk//n/CwAAAAAAAADl//j/CwAAAAAAAADm//f/CwAAAAAAAADn//f/CwAAAAAAAADo//b/CwAAAAAAAADp//b/CwAAAAAAAADq//b/CwAAAAAAAADr//b/CwAAAAAAAADq//X/CwAAAAAAAADp//X/CwAAAAAAAADo//X/CwAAAAAAAADm//X/CwAAAAAAAADl//X/CwAAAAAAAADk//X/CwAAAAAAAADj//b/CwAAAAAAAADi//b/CwAAAAAAAADh//j/CwAAAAAAAADi//j/CwAAAAAAAADi//n/CwAAAAAAAADi//v/CwAAAAAAAADm/+//DAAAAAAAAADn/+//DAAAAAAAAADo/+//DAAAAAAAAADp/+//DAAAAAAAAADq/+//DAAAAAAAAADr/+//DAAAAAAAAADs/+//DAAAAAAAAADt/+//DAAAAAAAAADu/+//DAAAAAAAAADv/+//DAAAAAAAAADw/+//DAAAAAAAAADx/+//DAAAAAAAAADy/+//DAAAAAAAAADz/+//DAAAAAAAAAD0/+//DAAAAAAAAAD1/+//DAAAAAAAAAD2/+//DAAAAAAAAAD3/+//DAAAAAAAAAD4/+//DAAAAAAAAAD5/+//DAAAAAAAAAD6/+//DAAAAAAAAAD7/+//DAAAAAAAAAD8/+//DAAAAAAAAAD9/+//DAAAAAAAAAD+/+//DAAAAAAAAAD//+//DAAAAAAAAAAAAO//DAAAAAAAAAABAO//DAAAAAAAAAACAO//DAAAAAAAAAADAO//DAAAAAAAAAAEAO//DAAAAAAAAAAFAO//DAAAAAAAAAAGAO//DAAAAAAAAAAHAO//DAAAAAAAAAAIAO//DAAAAAAAAAAJAO//DAAAAAAAAAAKAO//DAAAAAAAAAALAO//DAAAAAAAAAAMAO//DAAAAAAAAAANAO//DAAAAAAAAAAOAO//DAAAAAAAAAAPAO//DAAAAAAAAADl/+//DAAAAAAAAADk/+//DAAAAAAAAADj/+//DAAAAAAAAADi/+//DAAAAAAAAADh/+//DAAAAAAAAADg/+//DAAAAAAAAADf/+//DAAAAAAAAADe/+//DAAAAAAAAADd/+//DAAAAAAAAADc/+//DAAAAAAAAADb/+//DAAAAAAAAADa/+//DAAAAAAAAADZ/+//DAAAAAAAAADY/+//DAAAAAAAAADX/+//DAAAAAAAAADW/+//DAAAAAAAAADV/+//DAAAAAAAAADU/+//DAAAAAAAAADT/+//DAAAAAAAAADS/+//DAAAAAAAAADR/+//DAAAAAAAAADQ/+//DAAAAAAAAADP/+//DAAAAAAAAADO/+//DAAAAAAAAADN/+//DAAAAAAAAADM/+//DAAAAAAAAADL/+//DAAAAAAAAADK/+//DAAAAAAAAADJ/+//DAAAAAAAAADI/+//DAAAAAAAAADH/+//DAAAAAAAAADG/+//DAAAAAAAAADF/+//DAAAAAAAAAAQAO//DAAAAAAAAAARAO//DAAAAAAAAAASAO//DAAAAAAAAAATAO//DAAAAAAAAAAUAO//DAAAAAAAAAAVAO//DAAAAAAAAAAWAO//DAAAAAAAAAAXAO//DAAAAAAAAAAYAO//DAAAAAAAAAAZAO//DAAAAAAAAAAaAO//DAAAAAAAAAAbAO//DAAAAAAAAAAcAO//DAAAAAAAAAAdAO//DAAAAAAAAAAeAO//DAAAAAAAAAAfAO//DAAAAAAAAAAgAO//DAAAAAAAAAAhAO//DAAAAAAAAAAiAO//DAAAAAAAAAAjAO//DAAAAAAAAAAkAO//DAAAAAAAAAAlAO//DAAAAAAAAAAmAO//DAAAAAAAAAAnAO//DAAAAAAAAAAoAO//DAAAAAAAAAApAO//DAAAAAAAAAAqAO//DAAAAAAAAAArAO//DAAAAAAAAAAsAO//DAAAAAAAAAAtAO//DAAAAAAAAAAuAO//DAAAAAAAAAAvAO//DAAAAAAAAAAwAO//DAAAAAAAAAAxAO//DAAAAAAAAAAyAO//DAAAAAAAAAAzAO//DAAAAAAAAAA0AO//DAAAAAAAAAA1AO//DAAAAAAAAAA2AO//DAAAAAAAAAA3AO//DAAAAAAAAAA4AO//DAAAAAAAAAA5AO//DAAAAAAAAAA6AO//DAAAAAAAAADr/+z/CwAAAAAAAAD2/+z/CwAAAAAAAAD//+v/CwAAAAAAAADr/+n/CwAAAAAAAADr/+r/CwAAAAAAAADr/+v/CwAAAAAAAADs/+v/CwAAAAAAAADs/+z/CwAAAAAAAAD5/+z/CwAAAAAAAAD4/+z/CwAAAAAAAAD3/+z/CwAAAAAAAAAFAOz/CwAAAAAAAAAGAOz/CwAAAAAAAAAHAOz/CwAAAAAAAAAIAOz/CwAAAAAAAAALAOz/CwAAAAAAAAAMAOv/CwAAAAAAAAANAOr/CwAAAAAAAAAOAOr/CwAAAAAAAAAOAOn/CwAAAAAAAAAPAOn/CwAAAAAAAAAPAOj/CwAAAAAAAAAQAOj/CwAAAAAAAAAQAOf/CwAAAAAAAAAZAOj/CwAAAAAAAAAaAOj/CwAAAAAAAAAaAOn/CwAAAAAAAAAbAOn/CwAAAAAAAAAbAOr/CwAAAAAAAAAcAOr/CwAAAAAAAAAcAOv/CwAAAAAAAAAdAOv/CwAAAAAAAAAeAOv/CwAAAAAAAAAeAOz/CwAAAAAAAAAsAOv/CwAAAAAAAAAtAOv/CwAAAAAAAAAuAOv/CwAAAAAAAAAuAOr/CwAAAAAAAAAvAOr/CwAAAAAAAAAvAOn/CwAAAAAAAAAqAOj/CwAAAAAAAAApAOj/CwAAAAAAAAApAOn/CwAAAAAAAAAoAOn/CwAAAAAAAAAoAOr/CwAAAAAAAAAoAOv/CwAAAAAAAAAoAOz/CwAAAAAAAADk/+v/DgAAAAAAAADj/+v/DgAAAAAAAADi/+v/DgAAAAAAAADh/+v/DgAAAAAAAADg/+v/DgAAAAAAAADf/+v/DgAAAAAAAADe/+v/DgAAAAAAAADZ/+z/DgAAAAAAAADa/+z/DgAAAAAAAADb/+z/DgAAAAAAAADc/+z/DgAAAAAAAADd/+z/DgAAAAAAAADe/+z/DgAAAAAAAADf/+z/DgAAAAAAAADP/+n/DgAAAAAAAADP/+r/DgAAAAAAAADP/+v/DgAAAAAAAADP/+z/DgAAAAAAAADP/+3/DgAAAAAAAAD5/+X/DAAAAAAAAAD6/+X/DAAAAAAAAAD7/+X/DAAAAAAAAAD8/+X/DAAAAAAAAAD9/+X/DAAAAAAAAAD+/+X/DAAAAAAAAAD//+X/DAAAAAAAAAAAAOX/DAAAAAAAAAABAOX/DAAAAAAAAAD4/+X/DAAAAAAAAAD4/+T/DAAAAAAAAAD4/+P/DAAAAAAAAAD4/+L/DAAAAAAAAAD4/+H/DAAAAAAAAAD4/+D/DAAAAAAAAAACAOX/DAAAAAAAAAADAOX/DAAAAAAAAAAEAOX/DAAAAAAAAAAFAOX/DAAAAAAAAAAGAOX/DAAAAAAAAAAHAOX/DAAAAAAAAAAIAOX/DAAAAAAAAAAJAOX/DAAAAAAAAAAKAOX/DAAAAAAAAAALAOX/DAAAAAAAAAAMAOX/DAAAAAAAAAANAOX/DAAAAAAAAAAOAOX/DAAAAAAAAAAPAOX/DAAAAAAAAAAQAOX/DAAAAAAAAAARAOX/DAAAAAAAAAASAOX/DAAAAAAAAAATAOX/DAAAAAAAAAAUAOX/DAAAAAAAAAAVAOX/DAAAAAAAAAAWAOX/DAAAAAAAAAAXAOX/DAAAAAAAAAAYAOX/DAAAAAAAAAAJAOT/DgAAAAAAAAAJAOP/DgAAAAAAAAAJAOL/DgAAAAAAAAAJAOH/DgAAAAAAAAAJAOD/DgAAAAAAAAAJAN//DgAAAAAAAAAJAN7/DgAAAAAAAAAZAOX/DAAAAAAAAAAaAOX/DAAAAAAAAAAbANz/DAAAAAAAAAAbAN3/DAAAAAAAAAAbAN7/DAAAAAAAAAAbAN//DAAAAAAAAAAbAOD/DAAAAAAAAAAbAOH/DAAAAAAAAAAbAOL/DAAAAAAAAAAbAOP/DAAAAAAAAAAbAOT/DAAAAAAAAAAbAOX/DAAAAAAAAAAKAN7/DgAAAAAAAAAKAN//DgAAAAAAAAAKAOD/DgAAAAAAAAAKAOH/DgAAAAAAAAAKAOL/DgAAAAAAAAAKAOP/DgAAAAAAAAAKAOT/DgAAAAAAAAA=")
tile_set = SubResource("TileSet_7yljf")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, -497)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(304, -497)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(151, -490)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_dgwhg")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(167, -490)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fjr8r")

[node name="Gold" parent="." instance=ExtResource("8_ogbpq")]
position = Vector2(69, -16)

[node name="WindGust" parent="." instance=ExtResource("8_uysb3")]
position = Vector2(-88, -442)
scale = Vector2(-1, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
